syntax = "proto3";

package api.v1.capsule;

import "google/protobuf/timestamp.proto";

enum State {
  STATE_UNSPECIFIED = 0;
  STATE_PENDING = 1;
  STATE_RUNNING = 2;
  STATE_SUCCEEDED = 3;
  STATE_FAILED = 4;
 }
 
message Instance {
  string instance_id = 1;
  string build_id = 2;
  State state = 3;
  uint32 restart_count = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp started_at = 6;
  google.protobuf.Timestamp finished_at = 7;
  string message = 8;
  uint64 rollout_id = 9;
}


message InstanceStatus {
    string instance_id = 1;
    string message = 2;
    google.protobuf.Timestamp timestamp = 3;

    InstanceStatusScheduling schedule = 4;
    InstanceStatusPreparing preparing = 5;
    InstanceStatusRunning running = 6;
}

message InstanceStatusScheduling {
    string message = 1;
    StatusTimestamps timestamps = 2;

    ScheduleState state = 3;
}

enum ScheduleState {
    SCHEDULE_STATE_UNSPECIFIED = 0;
    SCHEDULE_STATE_CURRENTLY_UNSCHEDULEABLE = 1;
    SCHEDULE_STATE_DONE = 2;
}

message InstanceStatusPreparing {
    string message = 1;
    StatusTimestamps timestamps = 2;

    ImagePulling pulling = 3;
}

message ImagePulling {
    string message = 1;
    StatusTimestamps timestamps = 2;

    ImagePullingState state = 3;
}

enum ImagePullingState {
    IMAGE_PULLING_STATE_UNSPECIFIED = 0;
    IMAGE_PULLING_STATE_PULLING = 1;
    IMAGE_PULLING_STATE_ERROR = 2;
    IMAGE_PULLING_STATE_PULL_BACKOFF = 3;
    IMAGE_PULLING_STATE_DONE = 4;
}

message CrashLoopBackoff {
    string message = 1;
    StatusTimestamps timestamps = 2;
    ContainerStateTerminated terminated = 3;
    uint32 restarts = 4;
}

message InstanceStatusRunning {
    string message = 1;
    StatusTimestamps timestamps = 2;

    CrashLoopBackoff crash_loop_backoff = 3;
    InstanceRunningReady ready = 4;
    Running running = 5;
}

message Running {
    StatusTimestamps timestamps = 1;
}

message InstanceRunningReady {
    StatusTimestamps timestamps = 1;
    InstanceRunningReadyState state = 2;
}

enum InstanceRunningReadyState {
    INSTANCE_RUNNING_READY_STATE_UNSPECIFIED = 0;
    INSTANCE_RUNNING_READY_STATE_NOT_READY = 1;
    INSTANCE_RUNNING_READY_STATE_READY = 2;
}

message ContainerStateTerminated {
	// Exit status from the last termination of the container
	int32 exit_code	 = 1;
	// Signal from the last termination of the container
	// +optional
	int32 signal  = 2;
	// (brief) reason from the last termination of the container
	// +optional
    string reason  = 3;
	// Message regarding the last termination of the container
	// +optional
	string message = 4;
	// Time at which previous execution of the container started
	// +optional
    google.protobuf.Timestamp started_at = 5;
	// Time at which the container last terminated
	// +optional
    google.protobuf.Timestamp finished_at = 6;
	// Container's ID in the format '<type>://<container_id>'
	// +optional
	string container_id  = 7;
}

message StatusTimestamps {
    google.protobuf.Timestamp entered = 1;
    google.protobuf.Timestamp updated = 2;
    google.protobuf.Timestamp exited = 3;
}
